# legion-ide

./: .diff_head.txt  .diff_main.txt  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  ENGINEERING_AUDIT.html  ENGINEERING_AUDIT.yaml  ENGINEERING_PLAN.html  ENGINEERING_PLAN.yaml  ENGINEERING_STATUS.md  HERMESGOAL-GAP-ANALYSIS.md  HERMESGOAL.md  README.md  crates_diff.txt  deny.toml  full_diff.txt  k -- docs-hygiene  pyproject.toml  test.rs
crates/devil-agent/: Cargo.toml
crates/devil-agent/src/: lib.rs
crates/devil-ai/: Cargo.toml
crates/devil-ai-providers/: Cargo.toml
crates/devil-ai-providers/src/: lib.rs
crates/devil-ai/src/: lib.rs
crates/devil-app/: Cargo.toml
crates/devil-app/src/: lib.rs  main.rs  offline_ai.rs
crates/devil-app/tests/: assist_inline_prediction_workflow.rs  control_trust_surfaces.rs  daily_editing_contracts.rs  daily_editing_search.rs  debug_workflow.rs  delegated_task_integration.rs  git_workflow.rs  language_terminal_integration.rs  language_tooling_workflow.rs  legion_workflow_integration.rs  structural_search_workflow.rs  terminal_workflow.rs  workspace_vfs_integration.rs
crates/devil-cli/: Cargo.toml
crates/devil-cli/src/: main.rs
crates/devil-desktop/: Cargo.toml
crates/devil-desktop/src/: beta.rs  bridge.rs  diagnostics.rs  health.rs  lib.rs  main.rs  metrics.rs  package.rs  platform.rs  search.rs  session.rs  smoke.rs  theme.rs  view.rs  workflow.rs
crates/devil-desktop/tests/: assist_inline_prediction_workflow.rs  beta_workflow.rs  collaboration_gui.rs  control_trust_bridge.rs  control_trust_view.rs  daily_editing_controls.rs  debug_workflow.rs  delegated_task_command_center.rs  desktop_workflow.rs  diagnostics_export.rs  git_workflow.rs  intent_bridge.rs  language_terminal_view.rs  language_terminal_workflow.rs  large_file_guardrails.rs  legion_workflow_command_center.rs  operational_health.rs  packaging.rs  platform_integration.rs  platform_smoke.rs  plugin_management.rs  projection_rendering.rs  remote_workspace_gui.rs  save_all_conflict.rs  search_workflow.rs  session_restore.rs
crates/devil-memory/: Cargo.toml
crates/devil-memory/src/: lib.rs
crates/devil-plugin/: Cargo.toml
crates/devil-plugin/src/: lib.rs
crates/devil-project/: Cargo.toml
crates/devil-project/src/: lib.rs
crates/devil-project/tests/: debug_locator.rs  git_workflow.rs  path_boundary.rs  watcher_recovery.rs
crates/devil-remote-transport/: Cargo.toml
crates/devil-remote-transport/src/: lib.rs
crates/devil-retention/: Cargo.toml
crates/devil-retention/src/: lib.rs
crates/devil-storage/: Cargo.toml
crates/devil-storage/src/: lib.rs
crates/devil-storage/tests/: debug_breakpoints.rs
crates/devil-telemetry/: Cargo.toml
crates/devil-telemetry/src/: lib.rs
crates/devil-vscode-compat/: Cargo.toml
crates/devil-vscode-compat/src/: lib.rs
crates/legion-agent/: Cargo.toml
crates/legion-agent/src/: agent_loop.rs  budget.rs  comm.rs  coordinator.rs  dag.rs  evidence.rs  external.rs  lib.rs  merge_readiness.rs  plan.rs  scheduler.rs  scope.rs  state.rs  tools.rs  worktree.rs
crates/legion-agent/tests/: agent_loop_integration.rs  comm.rs  containment_canonicalization.rs  coordinator.rs  dag.rs  merge_readiness.rs  openai_tool_loop_cross_check.rs  plan_artifact.rs  sandbox_reaping.rs  scheduler.rs  scope_enforcement.rs  tools_schema.rs  worktree_sandbox.rs
crates/legion-ai/: Cargo.toml
crates/legion-ai-providers/: Cargo.toml
crates/legion-ai-providers/src/: capabilities.rs  lib.rs
crates/legion-ai-providers/tests/: mcp_ga_conformance.rs  prompt_stability.rs  provider_activation.rs  provider_smoke.rs  smoke.rs
crates/legion-ai/src/: classifier.rs  lib.rs  manifest.rs  redaction.rs  streaming.rs  telemetry.rs  tool_calls.rs
crates/legion-ai/tests/: advisory_classifier.rs  context_manifest.rs  egress_equality.rs  redaction.rs  streaming.rs  telemetry.rs
crates/legion-app/: Cargo.toml
crates/legion-app/src/: diagnostics.rs  first_run.rs  lib.rs  main.rs  offline_ai.rs  proposal.rs  terminal_policy.rs  test_explorer.rs  updater.rs
crates/legion-app/tests/: app_lsp_composition.rs  apply_activation.rs  assist_inline_prediction_workflow.rs  checkpoint_restore.rs  commit_validation_workflow.rs  control_trust_surfaces.rs  daily_editing_contracts.rs  daily_editing_search.rs  debug_workflow.rs  delegated_task_integration.rs  git_nav_workflow.rs  git_workflow.rs  hostile_eval_integration.rs  language_edit_proposal_routing.rs  language_log_redaction.rs  language_restart_policy.rs  language_stale_snapshot.rs  language_terminal_integration.rs  language_tooling_workflow.rs  legion_workflow_integration.rs  legion_workflow_plan_lifecycle.rs  live_dap_prebuild.rs  local_history_workflow.rs  manual_zero_egress.rs  palette.rs  plugin_grammar.rs  proposal_review_surface.rs  rust_analyzer_doc_sync.rs  rust_analyzer_download_policy.rs  rust_analyzer_read_requests.rs  rust_analyzer_session_handshake.rs  rust_analyzer_workflow.rs  settings.rs  structural_search_workflow.rs  terminal_workflow.rs  test_explorer_workflow.rs  two_ra_stress.rs  upd_tests.rs  workspace_vfs_integration.rs  worktree_creation_workflow.rs  (+1 more)
crates/legion-cli/: Cargo.toml
crates/legion-cli/src/: main.rs
crates/legion-debug/: Cargo.toml
crates/legion-debug/src/: adapter_resolve.rs  dap.rs  lib.rs  (+4 more)
crates/legion-desktop/: Cargo.toml
crates/legion-editor/: Cargo.toml
crates/legion-index/: Cargo.toml
crates/legion-lsp/: Cargo.toml
crates/legion-memory/: Cargo.toml
crates/legion-observability/: Cargo.toml
crates/legion-platform/: Cargo.toml
xtask/: Cargo.toml  legion-policy.example.toml  no-egui-textedit.toml  release-pipeline.example.toml
xtask/src/: claim_audit.rs  docs_hygiene.rs  golden_path.rs  golden_path_2.rs  golden_path_3.rs  golden_path_4.rs  kanban_backlog.rs  legion_bench.rs  lib.rs  main.rs  no_egui_textedit.rs  perf_harness.rs  release_pipeline.rs  signing.rs  update_drill.rs
xtask/tests/: claim_audit.rs  docs_hygiene.rs  kanban_backlog.rs  legion_bench.rs  manifest_sign.rs  no_egui_textedit.rs  perf_harness.rs  release_pipeline.rs
(+1260 files in other folders)
