[workspace]
resolver = "3"
members = [
    "crates/legion-app",
    "crates/legion-desktop",
    "xtask",
    "crates/legion-ui",
    "crates/legion-editor",
    "crates/legion-text",
    "crates/legion-project",
    "crates/legion-index",
    "crates/legion-lsp",
    "crates/legion-ai",
    "crates/legion-ai-providers",
    "crates/legion-agent",
    "crates/legion-tracker",
    "crates/legion-memory",
    "crates/legion-security",
    "crates/legion-platform",
    "crates/legion-protocol",
    "crates/legion-storage",
    "crates/legion-observability",
    "crates/legion-plugin",
    "crates/legion-vscode-compat",
    "crates/legion-collaboration",
    "crates/legion-remote",
    "crates/legion-remote-transport",
    "crates/legion-terminal",
    "crates/legion-debug",
    "crates/legion-telemetry",
    "crates/legion-retention",
    "crates/legion-sandbox",
    "crates/legion-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "Proprietary"
publish = false

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
clap = "4.5.61"
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tracing = "0.1"
uuid = { version = "1", features = ["v7", "serde"] }
hex = "0.4"
sha2 = "0.10"
toml = "0.8"
syntect = { version = "5.3.0", default-features = false, features = ["default-fancy"] }
tree-sitter = "0.26.9"
tree-sitter-rust = "0.24.2"
regex = "1"
globset = "0.4"
ignore = "0.4"
tantivy = "0.26.1"
cargo_metadata = "0.18"
wasmtime = "46.0.1"
wat = "1.252.0"
eframe = "0.34.2"
egui = "0.34.2"
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native", "linux-native-sync-persistent"] }
nix = { version = "0.31", default-features = false, features = ["fs", "process", "signal", "term"] }
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pki-types = { version = "1.14", features = ["std"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
windows = "0.62"

# Internal crates (version managed by workspace)
legion-protocol = { path = "crates/legion-protocol" }
legion-text = { path = "crates/legion-text" }
legion-platform = { path = "crates/legion-platform" }
legion-storage = { path = "crates/legion-storage" }
legion-observability = { path = "crates/legion-observability" }
legion-security = { path = "crates/legion-security" }
legion-editor = { path = "crates/legion-editor" }
legion-project = { path = "crates/legion-project" }
legion-index = { path = "crates/legion-index" }
legion-lsp = { path = "crates/legion-lsp" }
legion-ai-providers = { path = "crates/legion-ai-providers" }
legion-ai = { path = "crates/legion-ai" }
legion-tracker = { path = "crates/legion-tracker" }
legion-memory = { path = "crates/legion-memory" }
legion-agent = { path = "crates/legion-agent" }
legion-app = { path = "crates/legion-app", default-features = false }
legion-ui = { path = "crates/legion-ui" }
legion-desktop = { path = "crates/legion-desktop" }
legion-plugin = { path = "crates/legion-plugin" }
legion-vscode-compat = { path = "crates/legion-vscode-compat" }
legion-collaboration = { path = "crates/legion-collaboration" }
legion-remote = { path = "crates/legion-remote" }
legion-remote-transport = { path = "crates/legion-remote-transport" }
legion-terminal = { path = "crates/legion-terminal" }
legion-debug = { path = "crates/legion-debug" }
legion-telemetry = { path = "crates/legion-telemetry" }
legion-retention = { path = "crates/legion-retention" }
legion-sandbox = { path = "crates/legion-sandbox" }

# Build-size discipline: full-debuginfo PDBs for this 30-crate workspace peaked at
# ~100GB of target/ artifacts and repeatedly exhausted the build drive (see
# .superpowers/sdd/progress.md Phase 0 environment notes). Dev and test builds keep
# line tables, so panic backtraces and line-level profiling stay accurate. When you
# need full variable-level debuginfo to step through a crate in a debugger, build it
# with the `dev-full` profile instead: `cargo build --profile dev-full -p <crate>`.
[profile.dev]
debug = "line-tables-only"

[profile.dev-full]
inherits = "dev"
debug = "full"
