[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
clap = { version = "=4.5.61", features = ["derive"] }
cargo_metadata = { version = "=0.18.1" }
serde = { workspace = true }
toml = { workspace = true }
legion-text = { workspace = true }
legion-protocol = { workspace = true }
legion-project = { workspace = true }
legion-platform = { workspace = true }
legion-security = { workspace = true }
# PKT-SIGN: Ed25519 signing infrastructure (ADR-0042).
# BSD-3-Clause + MIT/Apache; adds curve25519-dalek, ed25519, signature, fiat-crypto
# (all new single-version crates with no deny.toml conflicts).
ed25519-dalek = "2"
base64 = "0.22"
zeroize = "1"
keyring = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
