[package]
name = "devil-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
devil-protocol = { workspace = true }
devil-ai = { workspace = true }
devil-tracker = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
