[package]
name = "devil-ai-providers"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
devil-ai = { workspace = true }
devil-protocol = { workspace = true }
devil-security = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
