[package]
name = "devil-app"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
devil-editor = { workspace = true }
devil-platform = { workspace = true }
devil-protocol = { workspace = true }
devil-ui = { workspace = true }
