[package]
name = "devil-app"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
devil-editor = { workspace = true }
devil-platform = { workspace = true }
devil-project = { workspace = true }
devil-protocol = { workspace = true }
devil-observability = { workspace = true }
devil-security = { workspace = true }
devil-storage = { workspace = true }
devil-ui = { workspace = true }
devil-agent = { workspace = true }
devil-ai = { workspace = true }
devil-ai-providers = { workspace = true }
devil-tracker = { workspace = true }
devil-memory = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
