[package]
name = "devil-app"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = ["ai"]
ai = ["dep:devil-agent", "dep:devil-ai", "dep:devil-ai-providers"]
offline = []

[dependencies]
anyhow = { workspace = true }
devil-editor = { workspace = true }
devil-index = { workspace = true }
devil-collaboration = { workspace = true }
devil-remote = { workspace = true }
devil-platform = { workspace = true }
devil-project = { workspace = true }
devil-protocol = { workspace = true }
devil-observability = { workspace = true }
devil-security = { workspace = true }
devil-storage = { workspace = true }
devil-terminal = { workspace = true }
devil-ui = { workspace = true }
devil-agent = { workspace = true, optional = true }
devil-ai = { workspace = true, optional = true }
devil-ai-providers = { workspace = true, optional = true }
devil-tracker = { workspace = true }
devil-memory = { workspace = true }
devil-plugin = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
