[package]
name = "devil-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = ["ai"]
ai = ["devil-app/ai"]
offline = ["devil-app/offline"]

[dependencies]
anyhow = { workspace = true }
devil-app = { workspace = true, default-features = false }
devil-protocol = { workspace = true }
devil-ui = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
