[package]
name = "devil-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
devil-protocol = { workspace = true }
devil-storage = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
