[package]
name = "devil-project"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
devil-protocol = { workspace = true }
devil-platform = { workspace = true }
devil-security = { workspace = true }
devil-storage = { workspace = true }
thiserror = { workspace = true }
