[package]
name = "devil-remote-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
devil-protocol = { workspace = true }
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util", "net"] }
tokio-rustls = { workspace = true }
uuid = { workspace = true }
