[package]
name = "devil-retention"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
chacha20poly1305 = "0.10"
devil-protocol = { workspace = true }
keyring = { workspace = true }
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }
uuid = { workspace = true }
zeroize = "1"
