[package]
name = "devil-telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
devil-protocol = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
