[package]
name = "devil-vscode-compat"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
devil-protocol = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
