[package]
name = "legion-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
legion-protocol = { workspace = true }
legion-ai = { workspace = true }
legion-platform = { workspace = true }
legion-tracker = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
