[package]
name = "legion-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
legion-protocol = { workspace = true }
legion-ai = { workspace = true }
legion-platform = { workspace = true }
legion-tracker = { workspace = true }
legion-debug = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
regex = { workspace = true }
globset = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
