[package]
name = "legion-ai-providers"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
legion-ai = { workspace = true }
legion-protocol = { workspace = true }
legion-security = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
