[package]
name = "legion-app"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = ["ai"]
ai = ["dep:legion-agent", "dep:legion-ai", "dep:legion-ai-providers"]
offline = []
# Expose test-only helper methods to integration-test binaries.
test-helpers = []

[dependencies]
anyhow = { workspace = true }
globset = { workspace = true }
legion-editor = { workspace = true }
legion-index = { workspace = true }
legion-lsp = { workspace = true }
legion-collaboration = { workspace = true }
legion-remote = { workspace = true }
legion-platform = { workspace = true }
legion-project = { workspace = true }
legion-protocol = { workspace = true }
legion-observability = { workspace = true }
legion-security = { workspace = true }
legion-storage = { workspace = true }
legion-debug = { workspace = true }
legion-terminal = { workspace = true }
legion-ui = { workspace = true }
legion-agent = { workspace = true, optional = true }
legion-ai = { workspace = true, optional = true }
legion-ai-providers = { workspace = true, optional = true }
legion-tracker = { workspace = true }
legion-memory = { workspace = true }
legion-plugin = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
syntect = { workspace = true }
hex = "0.4"

[dev-dependencies]
toml = { workspace = true }
# Self-referential dev-dependency: activates the test-helpers feature for every
# test/bench target in this crate WITHOUT `required-features` (which would make
# cargo silently skip those targets in the standing
# `cargo test --workspace --all-targets` gate) and without enabling the feature
# in production builds.
legion-app = { workspace = true, features = ["test-helpers"] }
