[package]
name = "legion-app"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = ["ai"]
ai = ["dep:legion-agent", "dep:legion-ai", "dep:legion-ai-providers"]
offline = []
# Exposes `*_for_test` seams (e.g. `set_lsp_health_for_test`) to integration
# test binaries in `tests/`.  Integration tests are compiled as separate crates
# and cannot see `#[cfg(test)]`-gated items from the library crate, so we use
# a dedicated feature instead.  The self-referential dev-dependency below
# enables this feature for all `tests/` binaries in this crate.  Any crate
# whose integration tests call these seams (e.g. legion-desktop) must similarly
# add `legion-app = { workspace = true, features = ["test-helpers"] }` under
# its own `[dev-dependencies]`.
test-helpers = []

[dependencies]
anyhow = { workspace = true }
globset = { workspace = true }
legion-editor = { workspace = true }
legion-index = { workspace = true }
legion-lsp = { workspace = true }
legion-collaboration = { workspace = true }
legion-remote = { workspace = true }
legion-platform = { workspace = true }
legion-project = { workspace = true }
legion-protocol = { workspace = true }
legion-observability = { workspace = true }
legion-security = { workspace = true }
legion-storage = { workspace = true }
legion-debug = { workspace = true }
legion-terminal = { workspace = true }
legion-ui = { workspace = true }
legion-agent = { workspace = true, optional = true }
legion-ai = { workspace = true, optional = true }
legion-ai-providers = { workspace = true, optional = true }
legion-tracker = { workspace = true }
legion-memory = { workspace = true }
legion-plugin = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
syntect = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = "3"
toml = { workspace = true }
# Self-referential dev-dependency: activates the test-helpers feature for every
# test/bench target in this crate WITHOUT `required-features` (which would make
# cargo silently skip those targets in the standing
# `cargo test --workspace --all-targets` gate) and without enabling the feature
# in production builds.
legion-app = { workspace = true, features = ["test-helpers"] }
