[package]
name = "legion-app"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = ["ai"]
ai = ["dep:legion-agent", "dep:legion-ai", "dep:legion-ai-providers", "dep:legion-sandbox"]
# offline: no hosted provider calls at runtime.  We still compile legion-ai
# (pure Rust, no network deps) so that the deterministic-local inline
# prediction provider is available.  The policy layer prevents actual remote
# invocations; reqwest is NOT pulled in because legion-ai-providers is
# excluded.
offline = ["dep:legion-ai"]
# Exposes `*_for_test` seams (e.g. `set_lsp_health_for_test`) to integration
# test binaries in `tests/`.  Integration tests are compiled as separate crates
# and cannot see `#[cfg(test)]`-gated items from the library crate, so we use
# a dedicated feature instead.  The self-referential dev-dependency below
# enables this feature for all `tests/` binaries in this crate.  Any crate
# whose integration tests call these seams (e.g. legion-desktop) must similarly
# add `legion-app = { workspace = true, features = ["test-helpers"] }` under
# its own `[dev-dependencies]`.
test-helpers = []

[dependencies]
anyhow = { workspace = true }
globset = { workspace = true }
legion-editor = { workspace = true }
legion-index = { workspace = true }
legion-lsp = { workspace = true }
legion-collaboration = { workspace = true }
legion-remote = { workspace = true }
legion-platform = { workspace = true }
legion-project = { workspace = true }
legion-protocol = { workspace = true }
legion-observability = { workspace = true }
legion-security = { workspace = true }
legion-storage = { workspace = true }
legion-debug = { workspace = true }
legion-terminal = { workspace = true }
legion-ui = { workspace = true }
legion-agent = { workspace = true, optional = true }
legion-ai = { workspace = true, optional = true }
legion-ai-providers = { workspace = true, optional = true }
legion-sandbox = { workspace = true, optional = true }
legion-tracker = { workspace = true }
legion-memory = { workspace = true }
legion-plugin = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
# PKT-UPDATER: Ed25519 verify (duplicated in updater module — xtask cannot be a dep).
ed25519-dalek = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
syntect = { workspace = true }
hex = { workspace = true }

# PKT-UPDATER: rename the binary so Windows installer-detection heuristic
# (which auto-elevates any exe containing "update" in its name) does not
# prevent the update-drill subprocess from running without elevation.
[[bin]]
name = "upd-drill"
path = "src/bin/update_drill.rs"

[[bin]]
name = "golden_path_2"
path = "src/bin/golden_path_2.rs"
required-features = ["ai"]

[[bin]]
name = "golden_path_3"
path = "src/bin/golden_path_3.rs"
required-features = ["ai"]

[[bin]]
name = "golden_path_4"
path = "src/bin/golden_path_4.rs"
required-features = ["ai"]

[dev-dependencies]
tempfile = "3"
serde_json = { workspace = true }
toml = { workspace = true }
legion-ai = { workspace = true }
legion-protocol = { workspace = true }
# Self-referential dev-dependency: activates the test-helpers feature for every
# test/bench target in this crate WITHOUT `required-features` (which would make
# cargo silently skip those targets in the standing
# `cargo test --workspace --all-targets` gate) and without enabling the feature
# in production builds.
legion-app = { workspace = true, features = ["test-helpers"] }
