[package]
name = "legion-debug"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
legion-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }

[[bin]]
name = "fake_dap_adapter"
path = "src/bin/fake_dap_adapter.rs"
