[package]
name = "legion-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = ["ai"]
ai = ["legion-app/ai"]
offline = ["legion-app/offline"]

[dependencies]
anyhow = { workspace = true }
legion-app = { workspace = true, default-features = false }
legion-protocol = { workspace = true }
legion-ui = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
