[package]
name = "legion-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = ["ai"]
ai = ["legion-app/ai", "dep:legion-ai"]
offline = ["legion-app/offline"]

[dependencies]
anyhow = { workspace = true }
legion-ai = { workspace = true, optional = true }
legion-ai-providers = { workspace = true }
legion-agent = { workspace = true }
legion-app = { workspace = true, default-features = false }
legion-project = { workspace = true }
legion-protocol = { workspace = true }
legion-remote = { workspace = true }
legion-sandbox = { workspace = true }
legion-storage = { workspace = true }
legion-terminal = { workspace = true }
legion-ui = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
legion-agent = { workspace = true }
legion-sandbox = { workspace = true }
legion-ai-providers = { workspace = true }
tempfile = "3"
uuid = { workspace = true }
# Enable `test-helpers` seams on AppComposition (e.g. `set_lsp_health_for_test`)
# so integration tests in tests/ can reach them without a real LSP server.
legion-app = { workspace = true, features = ["test-helpers"] }
