[package]
name = "legion-index"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
legion-protocol = { workspace = true }
legion-text = { workspace = true }
thiserror = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
