[package]
name = "legion-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
legion-protocol = { workspace = true }
legion-storage = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
