[package]
name = "legion-platform"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
legion-protocol = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_Threading",
] }
